# dendrite

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/buildomat/: common.sh  illumos.sh  linux.sh  packet-test-common.sh
.helix/: languages.toml
aal/: Cargo.toml
aal/src/: fuse.rs  lib.rs  match_action.rs  ports.rs
aal_macros/: Cargo.toml
aal_macros/src/: lib.rs
asic/: Cargo.toml  build.rs
asic/src/: faux_fsm.rs  lib.rs
common/: Cargo.toml
common/src/: attached_subnet.rs  counters.rs  ext_subnet.rs  illumos.rs  lib.rs  logging.rs  nat.rs  network.rs  ports.rs  smf.rs  table.rs
docs/: ras-registers.md  running_on_real_hardware.md
dpd/: Cargo.toml  build.rs
dpd-api/: Cargo.toml
dpd-api/src/: lib.rs  v1.rs  v12.rs  v2.rs  v3.rs  v4.rs  v5.rs  v7.rs
dpd-client/: Cargo.toml  README-testing.md
dpd-client/src/: lib.rs
dpd-client/tests/: test_all.rs
dpd-client/tests/chaos_tests/: harness.rs  mod.rs  port_settings.rs  util.rs
dpd-client/tests/integration_tests/: attached_subnet.rs  common.rs  counters.rs  external_subnet.rs  geneve.rs  icmp_ipv4.rs  local.rs  loopback.rs  mcast.rs  mod.rs  nat.rs  port_api.rs  route_ipv4.rs  route_ipv6.rs  service.rs  table_tests.rs
dpd-types/: Cargo.toml
dpd-types/src/: arp.rs  counters.rs  fault.rs  lib.rs  link.rs  loopback.rs  mcast.rs  misc.rs  nat.rs  oxstats.rs  port.rs  port_map.rs  route.rs  serdes.rs  snapshot.rs  switch_identifiers.rs  switch_port.rs  table.rs  transceivers.rs  views.rs
dpd-types/versions/: Cargo.toml
dpd-types/versions/src/: latest.rs  lib.rs
dpd-types/versions/src/asic_details/: mod.rs  switch_identifiers.rs
dpd-types/versions/src/attached_subnets/: mod.rs  route.rs
dpd-types/versions/src/consolidated_v4_routes/: mod.rs  route.rs
dpd-types/versions/src/impls/: link.rs  mcast.rs  mod.rs  port_map.rs  route.rs  serdes.rs  table.rs  transceivers.rs
dpd-types/versions/src/initial/: arp.rs  counters.rs  fault.rs  link.rs  loopback.rs  mcast.rs  misc.rs  mod.rs  nat.rs  port.rs  port_map.rs  route.rs  serdes.rs  switch_identifiers.rs  switch_port.rs  table.rs  transceivers.rs
dpd-types/versions/src/mcast_source_filter_any/: mcast.rs  mod.rs
dpd-types/versions/src/mcast_strict_underlay/: mcast.rs  mod.rs
dpd-types/versions/src/prbs_error_tracking/: link.rs  mod.rs  port.rs
dpd-types/versions/src/snapshot/: mod.rs  snapshot.rs
dpd-types/versions/src/v4_over_v6_routes/: mod.rs  route.rs
dpd-types/versions/src/wallclock_history/: link.rs  mod.rs
dpd/misc/: dpd-softnpu.xml  dpd.xml  full_config.toml  model_config.toml  ndpd.conf  sidecar_config.toml  xcvr_defaults.csv  zlog-cfg
dpd/p4/: constants.p4  critpath.p4  decap.p4  encap.p4  headers.p4  ipv4_set_len.p4  meta.p4  metadata.p4  parser.p4  port_bitmap_check.p4  route_selector.p4  sidecar.p4
dpd/src/: api_server.rs  arp.rs  attached_subnet.rs  config.rs  counters.rs  dhcpv6.rs  ext_subnet.rs  fault.rs  freemap.rs  link.rs  loopback.rs  macaddrs.rs  main.rs  mcast.rs  memtest.rs  nat.rs  oxstats.rs  port_map.rs  port_settings.rs  ports.rs  route.rs  snapshot.rs  softnpu_api_server.rs  switch_identifiers.rs  switch_port.rs  tofino_api_server.rs  types.rs  views.rs
dpd/src/dhcpv6/: dummy.rs  illumos.rs
dpd/src/mcast/: mod.rs  rollback.rs  validate.rs
dpd/src/nexus/: mod.rs  oximeter.rs  rpw.rs
dpd/src/rpw/: mod.rs
dpd/src/table/: arp_ipv4.rs  attached_subnet_v4.rs  attached_subnet_v6.rs  extsub.rs  extsub_ipv4.rs  extsub_ipv6.rs  mac.rs  mcast.rs  mod.rs  nat.rs  neighbor_ipv6.rs  port_ip.rs  port_mac.rs  port_nat.rs  route_ipv4.rs  route_ipv6.rs  uplink.rs
dpd/src/table/mcast/: mcast_egress.rs  mcast_nat.rs  mcast_port_mac.rs  mcast_replication.rs  mcast_route.rs  mcast_src_filter.rs  mod.rs  replication.rs  route.rs
dpd/src/transceivers/: mod.rs  stub_impl.rs  tofino_impl.rs
dpd/tests/: test_openapi.rs
dropshot-apis/: Cargo.toml
dropshot-apis/src/: main.rs
intr/: Cargo.toml
intr/src/: lib.rs  main.rs  pcie.rs  tcam.rs
openapi/: dpd.json
openapi/dpd/: dpd-1.0.0-40fbc6.json  dpd-1.0.0-40fbc6.json.gitstub  dpd-10.0.0-57485f.json  dpd-10.0.0-57485f.json.gitstub  dpd-11.0.0-29efd3.json  dpd-11.0.0-b81c2a.json  dpd-11.0.0-b81c2a.json.gitstub  dpd-11.0.0-cc8d70.json  dpd-12.0.0-a135ff.json  dpd-2.0.0-27e28b.json  dpd-2.0.0-376ddc.json  dpd-2.0.0-4300b0.json  dpd-2.0.0-4ba80a.json  dpd-2.0.0-74a45c.json  dpd-2.0.0-74a45c.json.gitstub  dpd-2.0.0-c75a52.json  dpd-2.0.0-ca35ed.json  dpd-2.0.0-e62a18.json  dpd-3.0.0-034efd.json  dpd-3.0.0-169a21.json  dpd-3.0.0-19eaa3.json  dpd-3.0.0-27dfd0.json  dpd-3.0.0-39189e.json  dpd-3.0.0-543c4c.json  dpd-3.0.0-583f59.json  dpd-3.0.0-6ed477.json  dpd-3.0.0-70f546.json  dpd-3.0.0-b02a88.json  dpd-3.0.0-b02a88.json.gitstub  dpd-3.0.0-d94342.json  dpd-3.0.0-e0be17.json  dpd-3.0.0-f810b8.json  dpd-4.0.0-00cf42.json  dpd-4.0.0-04ac56.json  dpd-4.0.0-42069e.json  dpd-4.0.0-56f11d.json  (+34 more)
packet/: Cargo.toml
pcap/: Cargo.toml  build.rs
swadm/: Cargo.toml
swadm/src/: addr.rs  arp.rs  attached.rs  compliance.rs  counters.rs  extsub.rs  link.rs  main.rs  multicast.rs  nat.rs  parsable_out.rs  route.rs  snapshot.rs  switchport.rs  table.rs
swadm/tests/: counters.rs  identifiers.rs  multicast.rs  port-link.rs
tfportd/: Cargo.toml  build.rs
tfportd/misc/: port_map.csv  tfport-softnpu-standalone.xml  tfport.xml
tfportd/src/: arp.rs  config.rs  linklocal.rs  main.rs  ndp.rs  netsupport.c  netsupport.rs  oxstats.rs  packet_queue.rs  ports.rs  sidecar.rs  simport.rs  techport.rs  tfport.rs  vlans.rs
tfportd/src/oxstats/: link.rs
tools/: check_copyrights.sh  omicron-asic-manifest.toml  omicron-softnpu-manifest.toml  omicron-stub-manifest.toml  ports_tof2.json  preflight.sh  route_selector_builder.sh  run_dpd.sh  run_tofino_model.sh  svc-dpd  svc-dpd-softnpu  svc-tfportd  svc-uplinkd  update_sde.sh  veth_setup.sh  veth_teardown.sh
uplinkd/: Cargo.toml
uplinkd/misc/: uplink.xml
uplinkd/src/: main.rs  sys.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  external.rs  illumos.rs  linux.rs  main.rs
(+57 files in other folders)
