[workspace]

members = [
	"aal",
	"asic",
	"aal_macros",
	"common",
	"dpd",
	"dpd-client",
	"packet",
	"pcap",
	"swadm",
	"tfportd",
	"uplinkd",
	"xtask",
]

resolver = "2"


[workspace.dependencies]

# intra-package dependencies
aal = { path = "aal" }
aal_macros = { path = "aal_macros" }
asic = { path = "asic" }
dpd-client = { path = "dpd-client" }
common = { path = "common" }
packet = { path = "packet" }
pcap = { path = "pcap" }

# oxide dependencies from github
internal-dns-resolver = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
internal-dns-types = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
gateway-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
nexus-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch= "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-instruments = { git = "https://github.com/oxidecomputer/omicron", branch = "main", default-features = false, features = ["kstat"] }
oxnet = { version = "0.1.0", default-features = false, features = ["schemars", "serde"] }
propolis = { git = "https://github.com/oxidecomputer/propolis" }
sled-agent-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
smf = { git = "https://github.com/illumos/smf-rs" }
softnpu-lib = { git = "https://github.com/oxidecomputer/softnpu" , package = "softnpu" , branch = "main"}
tofino = { git = "https://github.com/oxidecomputer/tofino", branch = "main" }
transceiver-controller = { git = "https://github.com/oxidecomputer/transceiver-control", branch = "main" }

# public dependencies from crates.io
anyhow = "1.0"
bytes = "1.6"
camino = { version = "1.1", features = ["serde1"] }
cfg-if = "1"
chrono = "0.4"
colored = "2"
csv = "1.3"
curl = "0.4"
display-error-chain = "0.2"
dropshot = "0.15.1"
expectorate = "1"
futures = "0.3"
http = "1.2.0"
kstat-rs = "0.2.4"
lazy_static = "1.5"
libc = "0.2"
mockall = "0.13.1"
omicron-zone-package = "0.12"
openssl = "0.10"
parking_lot = "0.12"
pretty_assertions = "1.4"
proc-macro2 = "1.0"
progenitor = "0.9.1"
rand = "0.8"
regex = "1.11"
regress = "0.10"
reqwest = { version = "0.12", default-features = false }
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
slog = { version = "2.7", features = [ "release_max_level_debug", "max_level_trace" ] }
slog-async = "2.8"
slog-bunyan = "2.5"
slog-term = "2.9"
socket2 = { version = "0.5", features = ["all"] }
structopt = "0.3"
strum = { version = "0.26.3", features = [ "derive" ] }
syn = { version = "2.0", features = ["extra-traits"]}
tabwriter = { version = "1", features = ["ansi_formatting"] }
thiserror = "1.0"
tokio = "1.37"
toml = "0.8"
usdt = "0.5"
uuid = { version = "1.10", features = [ "v4", "serde" ] }
internet-checksum = "0.2"

#
# It's common during development to use a local copy of various complex
# dependencies.  If you want to use those, uncomment one of these blocks.
#
# [patch."https://github.com/oxidecomputer/omicron"]
# oximeter = { path = "../omicron/oximeter/oximeter" }
