[package]
name = "aal"
version = "0.1.0"
edition = "2024"

[features]
default = ["multicast"]
multicast = []

[dependencies]
common.workspace = true
oximeter.workspace = true
oxnet.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
