[package]
name = "swadm"
description = "Management CLI for the Oxide switch"
version = "0.1.0"
authors = ["nils <nils@oxide.computer>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
common.workspace = true
dpd-client.workspace = true
futures.workspace = true
oxide-tokio-rt.workspace = true
oxnet.workspace = true
slog.workspace = true
tabwriter.workspace = true
tokio.workspace = true
