[package]
name = "tfportd"
version = "0.1.0"
edition = "2021"

[dependencies]
dpd-client.workspace = true
common.workspace = true
packet.workspace = true
pcap.workspace = true
lldpd-client = { git = "https://github.com/oxidecomputer/lldp" }

anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
futures.workspace = true
http.workspace = true
internet-checksum.workspace = true
ispf.workspace = true
libc.workspace = true
kstat-rs.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
signal-hook.workspace = true
slog.workspace = true
smf.workspace = true
socket2.workspace = true
structopt.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

omicron-common.workspace = true
oximeter.workspace = true
oximeter-instruments.workspace = true
oximeter-producer.workspace = true
oxnet.workspace = true

[build-dependencies]
cc = "1.0"
